Form-based workflow feature completed

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,5 +3,13 @@
 <p>
     <%= @article.body %>
 </p>
-
+<br>
+<br>
+<br>
 <%= link_to "<< Back to articles list", articles_path %>
+<br>
+<br>
+<%= link_to ">> Edit", edit_article_path(@article) %>
+<br>
+<br>
+<%= link_to "<< Delete", article_path(@article), method: :delete, data: {confirm: "Do you really, really want to delete this article?"} %>
