--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,13 +3,11 @@
 <p>
     <%= @article.body %>
 </p>
-<br>
-<br>
-<br>
-<%= link_to "<< Back to articles list", articles_path %>
-<br>
-<br>
-<%= link_to ">> Edit", edit_article_path(@article) %>
-<br>
-<br>
-<%= link_to "<< Delete", article_path(@article), method: :delete, data: {confirm: "Do you really, really want to delete this article?"} %>
+<br><br>
+<%= render partial: 'comments/form' %><br><br> 
+<%= link_to "<< Back to articles list", articles_path %><br>
+<%= link_to ">> Edit", edit_article_path(@article) %><br>
+<%= link_to "<< Delete", article_path(@article), method: :delete, data: {confirm: "Do you really, really want to delete this article?"} %><br>
+<br><br>
+<h3>Comments (<%= @article.comments.size %>)</h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
