--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,6 +6,11 @@
   <% end %>
 </p>
 <p>
+  <% if @article.image.exists? %>
+    <%= image_tag @article.image.url(:medium) %></p>
+  <% end %>
+</p>
+<p>
     <%= @article.body %>
 </p>
 <br><br>
