--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,6 +7,15 @@
         </li>
     <% end %>
 </ul>
+<br/><br/><br/>
+<h1>Top 3 Articles</h1>
+<ul id="articles">
+    <% @top_articles.each do |article| %>
+        <li>
+            <%= link_to article.title, article_path(article) %>
+        </li>
+    <% end %>
+</ul>
 
 <% if logged_in? %>
     <%= link_to "Create a new article", new_article_path, class: "new_article" %>
