--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,9 @@
 <h1><%= @article.title %></h1>
 <p>
+  Page views:
+  <%= @article.page_views %>
+</p>
+<p>
   Tags:
   <% @article.tags.each do |tag| %>
     <%= link_to tag.name, tag_path(tag) %>
